hphp/test/slow/exceptions/ctor_invalid_code_string.php.expectf

Fatal error: Wrong parameters for Exception([string $exception [, long $code [, Exception $previous = NULL]]]) in %s/ctor_invalid_code_string.php on line 3
